# chip-8-svelte-wasm

./: .eslintrc.js  .gitignore  README.md  a  global.css  package-lock.json  package.json  rollup.config.js  tsconfig.json
.github/workflows/: main.yml
public/: global.css  index.html
src/: App.svelte  ColourPicker.svelte  Emulator.svelte  GameCartriage.svelte  GameSlot.svelte  GamesHolder.svelte  Keyboard.svelte  Screen.svelte  Speaker.svelte  icons.ts  stores.ts  types.ts
src/components/: App.svelte  ColourPicker.svelte  Emulator.svelte  GameCartriage.svelte  GameSlot.svelte  GamesHolder.svelte  Keyboard.svelte  Modal.svelte  OptionsModal.svelte  Picker.svelte  Screen.svelte  SlidingButton.svelte  Speaker.svelte
src/wasm/: Cargo.toml
src/wasm/src/: chip.rs  cpu.rs  display.rs  lib.rs
