[package]
name = "svelte-wasm-chip8"
version = "0.1.0"
authors = ["Gurveer Arora <garora1410@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "^0.4"
wasm-bindgen = "^0.2"

[lib]
crate-type = ["cdylib", "rlib"]
