[package]
name = "svelte-wasm-chip8"
version = "0.1.0"
authors = ["Gurveer Arora <garora1410@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "^0.4"
wasm-bindgen = "^0.2"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
web-sys = { version="0.3.5", features=[ "console" ] }
js-sys = "0.3.46"
wasm-timer = "0.2.1"

[lib]
crate-type = ["cdylib", "rlib"]
